--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 ---
 repos:
   - repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 25.1.0
     hooks:
       - id: black
-        args: [--safe, --target-version, py38]
+        args: [--safe, --target-version, py310]
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.8.0
+    rev: 1.19.1
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==20.8b1]
+        additional_dependencies: [black==25.1.0]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -30,33 +30,34 @@ repos:
       - id: detect-private-key
       - id: forbid-new-submodules
   - repo: https://github.com/pre-commit/pre-commit
-    rev: v2.7.0
+    rev: v4.2.0
     hooks:
       - id: validate_manifest
   - repo: https://github.com/PyCQA/isort
-    rev: 5.5.0
+    rev: 6.0.1
     hooks:
       - id: isort
   - repo: https://github.com/pycqa/pylint
-    rev: pylint-2.8.0
+    rev: v3.3.7
     hooks:
       - id: pylint
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v1.16.1
     hooks:
       - id: mypy
         files: ^python_rako/.+\.py$
+        args: [--python-version=3.10]
   - repo: https://github.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 7.3.0
     hooks:
       - id: flake8
         additional_dependencies: ["flake8-docstrings"]
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.24.2
+    rev: v1.37.1
     hooks:
       - id: yamllint
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.7.2
+    rev: v3.20.0
     hooks:
       - id: pyupgrade
-        args: [--py38-plus]
+        args: [--py310-plus]
