--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checking out code from GitHub
-        uses: actions/checkout@v2
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+        uses: actions/checkout@v4
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.12
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
@@ -31,12 +31,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu]
-        python: [3.8, 3.9]
+        python: [3.10, 3.11, 3.12, 3.13]
     steps:
       - name: Checking out code from GitHub
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v2.2.1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
@@ -47,8 +47,8 @@ jobs:
       - name: Pytest with coverage reporting
         run: python -m pytest --cov=python_rako --cov-report=xml tests
       - name: Upload coverage to Codecov
-        if: matrix.python == 3.9 && matrix.os == 'ubuntu'
-        uses: codecov/codecov-action@v1.5.0
+        if: matrix.python == 3.12 && matrix.os == 'ubuntu'
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
