--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     hooks:
       - id: black
         args: [--safe, --target-version, py310]
+        exclude: ^python_rako/__version__\.py$
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.19.1
     hooks:
@@ -15,8 +16,10 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: ^python_rako/__version__\.py$
       - id: check-merge-conflict
       - id: debug-statements
+        exclude: ^python_rako/__version__\.py$
       - id: check-docstring-first
       - id: check-json
       - id: check-yaml
@@ -27,6 +30,7 @@ repos:
       - id: fix-encoding-pragma
         args: ["--remove"]
       - id: check-ast
+        exclude: ^python_rako/__version__\.py$
       - id: detect-private-key
       - id: forbid-new-submodules
   - repo: https://github.com/pre-commit/pre-commit
@@ -37,21 +41,25 @@ repos:
     rev: 6.0.1
     hooks:
       - id: isort
+        exclude: ^python_rako/__version__\.py$
   - repo: https://github.com/pycqa/pylint
     rev: v3.3.7
     hooks:
       - id: pylint
+        exclude: ^python_rako/__version__\.py$
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.16.1
     hooks:
       - id: mypy
         files: ^python_rako/.+\.py$
+        exclude: ^python_rako/__version__\.py$
         args: [--python-version=3.10]
   - repo: https://github.com/pycqa/flake8
     rev: 7.3.0
     hooks:
       - id: flake8
         additional_dependencies: ["flake8-docstrings"]
+        exclude: ^python_rako/__version__\.py$
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.37.1
     hooks:
